feat(meteo-v2): résout dynamiquement la localisation IGN
